[tool.poetry]
name = "todo-chatbot-backend"
version = "0.1.0"
description = "Backend for Todo AI Chatbot using FastAPI, MCP, and OpenAI Agents"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlmodel = "^0.0.14"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"
openai-agents = "^0.0.1"
mcp = "^0.1.0"
better-auth = "^0.1.0"
pydantic = "^2.5.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
